# tec.h

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  tec.c  tec.h  tec_showcase.cpp  tec_showcase_cpp.c
.github/workflows/: ci.yml
ex_test_utility_fn/: math_utils.c  math_utils.h
include/: math_utils.h  string_utils.h
src/: main.c  math_utils.c  string_utils.c
tests/: math_utils_test.c  string_utils.c  string_utils_test.c  test_runner  test_runner.c
tests/core/: assertion.c  control_flow.c  formatter.c  registration.c  setup_fixture.c
tests/math/: math_utils.c
